Add LoginRequest and AuthResponse DTOs; refactor Borrowers and Books controllers to use new services; enhance error handling in ApiExceptionHandler; update application properties for Derby DB; improve CSS styles for better layout.